Avoid double padding when breadcrum link is wrapped in span
git-svn-id: svn://svn.totalactivemedia.nl/beeldgeluid@19659 a5e0a7a9-93bf-8f48-8ca9-7e8460674ce7

--- a/sites/all/themes/beeldgeluid/css/pages.css
+++ b/sites/all/themes/beeldgeluid/css/pages.css
@@ -192,6 +192,11 @@ body#tinymce {
   padding: 0 5px;
 }
 
+/* Avoid double padding when breadcrum link is wrapped in span. */
+.breadcrumb a span {
+  padding: 0;
+}
+
 .breadcrumb a.first {
   padding-left: 0;
 }
